add new sketchfab and update text
Former-commit-id: ccba4171899a619d8b3681f2c9b14ef020707d9f [formerly 5194a470bd3c9f6b3273eff78636b2aba05d7af3]
Former-commit-id: 8ce82afad7530fb0a390d103fb4315ad33d51fee

--- a/index.html
+++ b/index.html
@@ -417,14 +417,25 @@
 					</p>
 					<br class="clearboth">
 				<div class="floatL pad15">
-					<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" 
+					<iframe width="640" height="480" src="https://sketchfab.com/models/ebc7efd2f44747f9b801210566896f94/embed"
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>		
 					
 				</div>
 				<p class="blackwide">
-						This is an early stage of the colony when the first hab is ready. The main pieces that make this possible are introduced here, 
-						and then explained further in the models that follow. 
-						Note that the hab right now is empty, it needs all its internal structures and furnishings built, not to mention its garden.
+						This shows the first two habitats finished and home to a a crew of 30. Most of the interior hasn't been modeled but the main areas have 
+						been sketched into the first dugout and hall. This model has been done with lighting and materials that give a much better sense of 
+						what the space would be like, and it has been optimized so that it will run smoothly on most computers, including many tablets. 
+						(I don't recommend it on a phone.) If the scale seems pretty ambitious, well it is, but consider that 
+						<a href="https://www.researchgate.net/publication/287512462_Advanced_Systems_Concept_for_Autonomous_Construction_and_Self-repair_of_Lunar_Surface_ISRU_Structures">
+						this paper</a> by Haym Benaroya 
+						looked at using cast basalt as a building material, and by the figures he calculated for the energy needed to melt it, just one of the
+						Fresnel lenses planned for the melt-in-place stations could melt a metric ton of it in about 3 hours. One of 
+						<a href="http://www.psicorp.com/pdf/library/VG09-193.pdf">these things</a> 
+						that i've taken to calling sun guns, with a set of concave mirrors adding up to 50 m<sup>2</sup> could do it in about 8 hours. 
+						Use a sun gun to cut a trench around the area to be excavated, and to bore holes to place micro-charges of explosives, and 99% 
+						of the material can be loosened into manageable chunks the gantry crane can lift out. 
+						The construction technique is being steadily improved, but this seems pretty doable. It would just take experimentation on-site to 
+						refine it - and when has colonization ever been achieved without a ton of adaptation and innovation on-site?
 					</p>
 				<br class="clearboth">
 				<div class="floatL pad15">
@@ -435,7 +446,8 @@
 						This whole colony concept depends on basalt being used for a great many things, and on focused sunlight being used to process it. The Melt-In-Place Station comes up on the first mission to test and refine 
 						how to make building materials out of the basalt dust all over the dark areas of the Moon. In the vacuum of space this basalt feedstock will behave differently than such material on Earth, 
 						and it has a chemical make-up different than anything found here. It is absolutely free of hydrated minerals (with water molecules in their crystal structure) and organic chemicals, 
-						has a higher content of iron and titanium, and its chemicals are highly reduced (meaning they tend to have extra electrons). Analysis done on Earth indicates that could mean basalt 
+						has a higher content of iron and titanium, and its chemicals are highly reduced (meaning they tend to have extra electrons). 
+						<a href="http://www.lpi.usra.edu/publications/books/lunar_bases/LSBchapter07.pdf#pagemode=bookmarks&page=53">Analysis done on Earth</a> indicates that could mean basalt 
 						materials on the Moon would be a lot <i>stronger</i> than they are here. We won't know until we experiment there. At any rate, cast basalt on Earth performs well as a construction 
 						material, and all the processes proposed are based on its known properties here.
 					</p>
@@ -447,7 +459,11 @@
 				<p class="blackwide">
 					This sketch is even more sketchy than the others, more of a schematic really. Basalt rope and cloth are strong and durable here on 
 					Earth, and are made with a simple process. How that process will need to be adapted on the Moon is an open question. It can be done though. 
-					Beyond the early days when it is useful for infrastructure, cloth would also be useful for simple things like bedding, clothing, and curtains.
+					The cable can be used to reinforce the arches and anchors that contain the pressure of the air in the habs, it can be cable for the 
+					gantry crane, winches, and to suspend insulation tents over thermal wadis (fused basalt patios where machinery is stored overnight 
+					to protect it from the deep cold). Cloth can be coated with 
+					aluminum to make reflective insulation (which is highly useful for a lot of different things), or for temporary habs inside the 
+					protected environment of lava tubes. Cloth would also be useful for simple things like bedding, clothing, and curtains.
 				</p>
 				<br class="clearboth">
 				<div class="floatL pad15">
@@ -455,12 +471,8 @@
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 				</div>
 				<p class="blackwide">
-					Here is the first venture into what could be done on the Moon once the scale necessary to build real towns exists. It is bold, but it is 
-					realistic. It can't be done without a great deal of investment, but on the other hand, that kind of investment would never make sense if 
-					this kind of structure wasn't what would come of it down the road. Later the construction method that will create it will be explored. 
-					The method has been optimized as much as possible. It relies on concentrated sunlight applied directly to the regolith to create 
-					trenches and anchor points, micro-charges of explosives to break up the ground for excavation, and the use of molten basalt 
-					and basalt cable and cloth to create the walls, storeys, supports, and most furnishings.
+					Here is the first venture into what could be done on the Moon once the scale necessary to build real towns exists. It extends the 
+					methods already outlined, and takes advantage of the terrain. 
 				</p>
 				<br class="clearboth">
 				<div class="floatL pad15">
