improve image text
Former-commit-id: 44d031ab6fa81145fdaa27a6300ed6dd3a4536fc

--- a/index.html
+++ b/index.html
@@ -151,9 +151,13 @@
 					</button>
 					<button class="numbers tooltipBR" style="top: 10%; left: 55%;">4
 						<span>About another 100 km north is the equator. Something in a near equatorial orbit would be accessible to 
-						Lalande a few times a day. 
-						Things at the poles have that kind of access as well, to things in a polar orbit. Things in other places 
-						have to deal with plane changes and orbital dynamics that requires more fuel and far fewer rendezvous opportunities.
+						Lalande a few times a day - like an upper stage full of fuel that would allow the payload launched from the 
+						surface to be much larger. 
+						Things at the poles have that kind of access as well, to things in a polar orbit, but an upper stage would only 
+						be aligned with the direction of the Moon's orbit every two weeks, so launch windows to Earth would only be near 
+						those times. Things in other places 
+						have to deal with plane changes and orbital dynamics that requires more fuel and far fewer rendezvous opportunities 
+						than the poles or the equator. 
 						</span>
 					</button>
 				<img src="http://moonwards.com/img/LalandeRegion.svg" alt="Lalande Crater overview">
@@ -165,24 +169,25 @@
 				<div class="darkYellow pix">
 						<button class="numbers tooltipB" style="top: 25%; left: 66%;">5
 							<span>Here is a collection of especially large boulders, 10 to 30 
-							m across above the surface. They are all partially submerged and so 
+							m across above the surface. They are all partially submerged so 
 							some will be larger below the surface. 
 							Boulders are much more common near the lips of 
-							craters because they are created by the blast of the impact, thrown high 
-							into the - uh, where the air would be if it existed - and many come down 
-							close by. 
-							And because Lalande is a young crater, they haven't been buried by 
+							craters. They were created by the impact blast, thrown high 
+							up then came down close by. 
+							Because Lalande is a young crater, they haven't been buried by 
 							dust. Boulders are useful as thermal mass, anchors, counterweights, 
-							radiation shielding, and feedstock for refining processes.
+							and radiation shielding. Some could be bedrock from 3 km below the surface, 
+							so they could be made of just one or two minerals and be good feedstock for 
+							refining processes.
 							</span>
 						</button>
 						<button class="numbers tooltipBBL" style="top: 18%; left: 45%;">6
 						<span>Case in point - the boulders with the especially long shadows just left of the 
 						marker. They are huge, the size of barns. They are so useful, the first phase of 
-						the initial base will go here, nestled against them. Their stability and height 
-						allow the use of a gantry crane, and provide a firm anchor for cables so 
-						rovers can work on the steep inside face of Lalande. In fact they will be 
-						referred to so much i've named them Gibraltar, because they are anchors.
+						the initial base will go here, nestled against them. The first habitats will 
+						use them as thermal mass. Rovers can anchor themselves 
+						to them so they can apply force without tipping, or drag themselves out of a spot if 
+						they get stuck. 
 						</span>
 						</button>
 						<button class="numbers tooltipB" style="top: 48%; left: 51%;">7
@@ -192,10 +197,11 @@
 						It is a good size to be interesting for future plans - 300 m across - 
 						and in the right place - 150 m from Lalande. 
 						Once the colony is really growing, there are some 
-						neat things you can do here. Excavate a channel between it and Lalande, 
-						and cover the entire crater with a geodesic dome. But that takes a lot of 
-						infrastructure, so it will be part of later phases of construction.  
-						It gets a name too. Teacup Crater.
+						neat things you can do here. It is a great place to test 
+						construction of geodesic water domes that would be 6 m of water sandwiched between 
+						laminated quartz. Construction of such domes is what will make true cities possible in the 
+						long term. But that takes a lot of 
+						infrastructure, so it will be presented as part of later phases.  
 						</span>
 						</button>
 						<img src="http://moonwards.com/img/LalandeSite500.jpg" alt="East rim of Lalande Crater">
@@ -211,13 +217,7 @@
 							This is a debris field 1.5 km long by 1 km wide, created by material 
 							that slumped down the face of the crater. 
 							It is full of boulders 50 to 100 m across. 
-							At its top is a small shelf 100 by 500 m, 1.5 km below the 
-							crater lip, and at its bottom is 
-							deeper shelves revealed by the three dark arcs near the edge 
-							of the image. They are 2 km below the lip. This area has 
-							possibilities as well, once there is enough infrastructure. The deeper 
-							shelves provide good shielding for living spaces. Boulders 
-							could be bedrock, possibly good ore without digging.  
+							They could be bedrock, possibly good ore without digging.  
 							</span>
 					</button>
 					<button class="numbers tooltipML" style="top: 30%; left: 50%;">9
@@ -234,7 +234,7 @@
 							seas.
 							The highlands are made mostly of anorthosite, a class of minerals that don't 
 							have the qualities that make basalt such a good construction material.  
-							Some minerals here could be good ore for aluminum production. 
+							Some minerals here could be good ore for production of aluminum, glass, quartz, or sapphire. 
 							</span>
 					</button>
 				<img src="http://moonwards.com/img/LalandeArea500.jpg" alt="Southeast Lalande Crater area">
@@ -264,24 +264,23 @@
 					</button>
 					<button class="numbers tooltipBL" style="top: 47%; left: 70%;">12
 						<span>
-						That tiny speck just on the rim at right is Gibraltar. 
+						That tiny speck just on the rim at right are the huge boulders shown in the top middle image. 
 						</span>
 					</button>
 					<button class="numbers tooltipML" style="top: 55.5%; left: 72.5%;">13
 						<span>
 							<img class="tooltip-img" style="float: left;" src="http://moonwards.com/img/Teacup250.jpg">
-						And here's Teacup Crater. To its right you can faintly see a line where the raised ground by the 
-						crater rim stops, and flatter ground begins. 
-						Hopefully that would be an adequate landing spot for the first missions. 
-						It has a soft rim and no floor, the incline of its sides just meet. 
+						This crater has a soft rim and no floor, the incline of its sides just meet. 
 						That may indicate the top layer of granular regolith is deeper than it is, so over 40 m. 
-						Recent modelling has shown the ground sort of folds back on itself on the lips of craters, which 
-						would make the granular layer twice the depth it had before.
+						Recent modeling has shown the ground sort of folds back on itself on the lips of craters, which 
+						would make the granular layer twice the depth it had before. It could be 100 m deep. 
 						</span>
 					</button>
 					<button class="numbers tooltipBR" style="top: 22%; left: 35%;">14
-						<span>This looks like bedrock. Up close, there is surely a layer of moondust over it, but not a lot. 
-						Maybe a meter or so, easily dug away on a grade like this. In bedrock, you find minerals much purer 
+						<span>This looks like bedrock. Up close, there is surely a layer of moondust over it, but 
+						thanks to the angle, not a lot. 
+						We can hope for meter or so, easily dug away on a grade like this. 
+						In bedrock, you find minerals much purer 
 						than the regolith on the surface. It hasn't been mixed over the aeons by meteor impacts that toss 
 						particles all over the planet. On the Moon, minerals could come in layers, not veins like 
 						on Earth. If you find a layer of rich ore, it could extend over a large area. Around here the 
@@ -344,8 +343,8 @@
 					<button class="numbers tooltipR" style="top: 58%; left: 21%;">19
 						<span>
 						<img class="tooltip-img" src="http://moonwards.com/img/lal-dark-material.jpg">
-						These hills, which mark the central upwelling that occurs in craters of this size as the 
-						ground rebounds after their creation impacts, have a lot of boulders on top of them 
+						These hills mark the central upwelling that occurs in craters of this size as the 
+						ground rebounds after their creation impacts. They have a lot of boulders on top of them 
 						much darker than surrounding material. In this shot at midday the contrast is stark, it is less 
 						noticeable in images where the sun wasn't almost right behind the camera. Kepler and Aristarchus 
 						have this phenomenon too, to a lesser degree. Pockets of light material are usually explained as 
@@ -404,7 +403,14 @@
 		 	The design is based on the primary income being residency, broadcasting, and tourism initially, and space construction 
 		 	for various purposes later. The habitats are designed to be pleasant places to live for the rest of your life. 
 		 	Thus building on a large scale is done from the outset. 
-		 	This is made feasible through the use of tele-operated robotic machinery and the extensive use of fused and cast basalt. 
+		 	This is made feasible through the use of tele-operated robotic machinery and the extensive use of fused and cast basalt.
+		 	</p>
+		 	<p> 
+		 	More importantly, it is made possible by a group of nations together devoting serious investment to the task - this situation 
+		 	is assumed by Moonwards. Maybe an 
+		 	example of a really fantastic project that is only possible by joining forces and using the resources freed up by not 
+		 	fighting, will convince people to finally properly pursue that goal. Maybe pursuing a fantastic project together creates 
+		 	bonds that lead to trust and then there is no desire to fight. Getting that feedback loop going would be a wonderful thing.
 		 	</p>
 		 </div>
 	 </div>
@@ -422,7 +428,7 @@
 					
 				</div>
 				<p class="blackwide">
-						This shows the first two habitats finished and home to a a crew of 30. Most of the interior hasn't been modeled but the main areas have 
+						This shows the first two habitats finished and home to a crew of 30. Most of the interior hasn't been modeled but the main areas have 
 						been sketched into the first dugout and hall. This model has been done with lighting and materials that give a much better sense of 
 						what the space would be like, and it has been optimized so that it will run smoothly on most computers, including many tablets. 
 						(I don't recommend it on a phone.) If the scale seems pretty ambitious, well it is, but consider that 
@@ -497,12 +503,14 @@
 				</div>
 				<p class="blackwide">
 					The TESS, the Thermal Energy Storage System, is a centerpiece of this approach. It provides electricity generation 
-					both day and night. It captures vapors of pure oxygen, and chemicals 
-					such as oxides of potassium, phosphorus, and sodium - all very useful. The pond of lava depleted in these chemicals can 
-					be partially drawn off at the end of the day and taken for further processing that is much simplified by that state. 
+					both day and night. 
 					It isn't a very efficient system - 20% energy conversion 
 					is probably a decent estimate overall - but the fuel is free (sunlight), the system is highly durable, robust, easy to repair, 
-					and most components could be fabricated right on the Moon early in the days of a settlement.
+					and most components could be fabricated right on the Moon early in the days of a settlement. Plus it serves several 
+					additional important functions at the same time. It captures vapors of pure oxygen, and chemicals 
+					such as oxides of potassium, phosphorus, sulfur and sodium - all very useful. The pond of lava depleted in these chemicals can 
+					be partially drawn off at the end of the day and taken for further processing that is much simplified by that state. The 
+					lava could also optionally be used for construction.
 				</p>
 				<br class="clearboth">
 	</div>
