--- a/planning.html
+++ b/planning.html
@@ -90,7 +90,13 @@
 		 </h2>
 		 <div class="col-9 col-m-10 intro">
 			 <p>
-			 We're building the first draft now. 
+			 We're drafting a permanent colony home to about 250 permanent residents. The finished habs, installations, 
+			 and equipment is what will be modeled, but everything has to be based on a well-defined, realistic approach that 
+			 has the best possible technical merit and efficiency. So, even though the construction process won't be 
+			 documented until later, it has to be carefully thought through and everything has to obey it. 
+			 
+			 The better this groundwork is done, the more quickly the project can expand
+			 
 			 It develops how to build an extensive permanent colony on the Moon. 
 			 The main thing is that this is a vision of what could be done if there was a serious drive for settlement, 
 			 where a group of nations considered it important enough to devote significant funds to the task.  
@@ -154,7 +160,7 @@
 		
 	 	<div class="col-8 col-m-10">
 		 	<div class="black roundAll">
-			 	<p><strong>Installations and Equipment:</strong> 
+			 	<p><strong>Infrastructure and Equipment:</strong> 
 			 	To maximize the utility of a limited amount of machinery and supplies, these are the 
 			 	design principles:
 			 	</p>
@@ -178,12 +184,8 @@
 			 		</ul>
 		 	</div>
 	 	</div>
-	 	<h2 class="col-3 col-m-2">
-	 		General Design Principals
-		</h2>
-	 </div>
- 	<div class="rowR" id="structures">
-	 	<div class="black roundAll col-8 col-m-10">
+	 	<div class="col-8 col-m-10">
+	 		<div class="black roundAll">
 			 	<p><strong>Structures:</strong> This is a permanent colony. Build for growth and for the ages:
 			 	</p>
 			 	<ul class="roundAll dark">
@@ -270,9 +272,12 @@
 		 			color prevents them from making spaces feel cluttered, while the images add visual richness.
 		 			</li>
 		 		</ul>
+		 		</div>
 	 	</div>
-	 </div>
-
+		<h2 class="col-3 col-m-2">
+	 		General Design Principles
+		</h2>
+	</div>
 </div>
  
 <script>
