--- a/planning.html
+++ b/planning.html
@@ -1,10 +1,10 @@
 	<!doctype html>
 <html class="no-js" lang="">
     <head>
-        <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta charset="utf-8">
         <title>Moonwards</title>
-        <meta name="description" content="">
+        <meta name="description" content="building a virtual Moon colony">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
@@ -21,7 +21,7 @@
 <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+<meta name="msapplication-square144x144logo" content="/mstile-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/main.css">
@@ -60,7 +60,7 @@
   			</li>
   			<li><a href="learn.html">Learn</a>
   				<ul>
-  					<li><a href="learn.html#interactives">Interactives</li>
+  					<li><a href="learn.html#interactives">Interactives</a></li>
   					<li><a href="learn.html#lessons">Lessons</a></li>
   				</ul>
   			<li><a href="why.html">Why</a>
@@ -82,7 +82,7 @@
     <div class="rowR">
      		<h1 id="top" class="col-6 col-m-7">The <span class="yellow">V</span>irtual <span class="yellow">M</span>oon 
      		<span class="yellow">C</span>olony Project: 
-     		<span class="yellow">Cernan's Promise</span> VMC</span> </h1>
+     		<span class="yellow">Cernan's Promise</span> VMC</h1>
     </div>
     <div class="rowL">
 		 <h2 class="col-3 col-m-2">
@@ -94,14 +94,14 @@
 			 and equipment is what will be modeled, but everything has to be based on a well-defined, realistic approach that 
 			 has the best possible technical merit and efficiency. So, even though the construction process won't be 
 			 documented until later, it has to be carefully thought through and everything has to obey it. 
-			 
-			 The better this groundwork is done, the more quickly the project can expand
-			 
-			 It develops how to build an extensive permanent colony on the Moon. 
-			 The main thing is that this is a vision of what could be done if there was a serious drive for settlement, 
-			 where a group of nations considered it important enough to devote significant funds to the task.  
-			 Cernan's Promise is the seed of much, much greater things. 
-			 Its goals are permanence, scale, flexibility, and ecosystem creation. 
+			<br><br>
+			 The better this groundwork is done, the more quickly the project can expand. Habitats in a large lava tube 
+			 and natural domes found on the floor of Lalande, and in a cave blasted out of the south face of the crater, 
+			 a base at the north pole, an extensive high volume tether transport system, giant polar greenhouses, covering 
+			 an entire 300 m crater with a dome of water and quartz, mining operations and manufacturing facilities, and 
+			 covering over all of Lalande Crater in a transparent dome - these are all projects i would like to do. If 
+			 this first phase is completed, as a true interactive virtual colony, these other phases can be undertaken. The 
+			 first one is by far the hardest.
 			 <br><br>
 			 This is an
 			 <span style="color: yellow;">Open Source Project</span>. 
@@ -157,10 +157,9 @@
 	 </div>
 
 	 <div class="rowR" id="equipment">
-		
 	 	<div class="col-8 col-m-10">
-		 	<div class="black roundAll">
-			 	<p><strong>Infrastructure and Equipment:</strong> 
+		 	<div class="darkYellow pad15 roundAll">
+			 	<p><strong class="yellow">Infrastructure and Equipment:</strong> 
 			 	To maximize the utility of a limited amount of machinery and supplies, these are the 
 			 	design principles:
 			 	</p>
@@ -170,8 +169,9 @@
 			 			</li>
 			 			<li><strong>Light</strong> - Use not only materials with the best density and strength for the lightest 
 			 			design, but also always look for ways to use local materials - rocks and soil for stability, insulation, or 
-			 			thermal mass, for instance. Remember that many pieces will arrive on the 2nd mission and there could be 
-			 			opportunities to have very simple structural elements be provided by materials made by the 1st mission.
+			 			thermal mass, for instance. Early missions are designed to create capacity to build elements that can be used 
+			 			this way. Simple structural elements like frames, tanks, and cables will be made on-site by the time the 2nd 
+			 			or 3rd payload of machinery arrives.
 			 			</li>
 			 			<li><strong>Simple</strong> - Low part count, simplest possible technology. Electric or mechanical actuators instead of 
 			 			hydraulic, for example. Design parts that can be replaced with parts fabricated on site where possible - 3d 
@@ -179,14 +179,20 @@
 			 			</li>
 			 			<li><strong>Feasible</strong> - Everything needs to be designed and developed, but don't use a technology 
 			 			unless there is high confidence it would be available to a real colony. It is reasonable to assume more agile 
-			 			and powerful robotics, for instance, but don't bet on fusion power.
+			 			and powerful robotics, for instance, but don't bet on fusion power. Make use of what has been created instead 
+			 			building something that requires different technology or duplicates the capacity of something already created. 
+			 			If you think there is a superior option, make the case, and maybe a whole element will be replaced if you are right. 
+			 			That is why the solar furnace was replaced by the TESS. 
 			 			</li>
 			 		</ul>
 		 	</div>
 	 	</div>
+	 	<h2 class="col-3 col-m-2 yellow">
+	 		General Design Principles
+		</h2>
 	 	<div class="col-8 col-m-10">
-	 		<div class="black roundAll">
-			 	<p><strong>Structures:</strong> This is a permanent colony. Build for growth and for the ages:
+	 		<div class="darkYellow pad15 roundAll">
+			 	<p><strong class="yellow">Habitats:</strong> This is a permanent colony. Build for growth and for the ages:
 			 	</p>
 			 	<ul class="roundAll dark">
 			 		<li><strong>Low Radiation</strong> - The maximum annual dose for long-term lunar residents 
@@ -274,41 +280,8 @@
 		 		</ul>
 		 		</div>
 	 	</div>
-		<h2 class="col-3 col-m-2">
-	 		General Design Principles
-		</h2>
 	</div>
 </div>
- 
-<script>
-      $(document).ready(function() {
-      	$("[id*=mipdiv]").hide();
-      	$(".issues").hide();
-      	$("#mipdivA").show();
-      	$("#mipshowA").click(function() {
-      		$("#mipdivA").show();
-      		$("#mipdivB").hide();
-      		$("#mipdivC").hide();
-      	});
-      	$("#mipshowB").click(function() {
-      		$("#mipdivB").show();
-      		$("#mipdivA").hide();
-      		$("#mipdivC").hide();
-      	});
-      	$("#mipshowC").click(function() {
-      		$("#mipdivC").show();
-      		$(".issues").hide();
-      		$("#mipdivB").hide();
-      		$("#mipdivA").hide();
-      	});
-      	$(".issues1").click(function() {
-      		$(".issues").toggle();
-      	});
-      	$(".numbers1").click(function () {
-      	   $(".numbers").toggle();
-      	});
-      });
-</script>
 
     </body>
 </html>
