--- a/learn.html
+++ b/learn.html
@@ -128,7 +128,7 @@
 <p>Click and drag!</p>
 <div class="noFloat">
 	<img src="img/mapmini.jpg" style="display:none" width="512" height="256" id="moonMap">
-	<canvas id="subOrbitalCanvas" width="512" height="256"></canvas>
+	<canvas id="subOrbitalCanvas" width="512" height="256" onmouseover="document.body.cursor='move'" onmouseout="ocument.body.cursor='auto'"></canvas>
 </div>
 <p id="resultSH">&nbsp;</p>
 <script>
