added embed of flythrough
Former-commit-id: d8fac3a19176251288aa5229a865ffbeecb9c0ff [formerly 7a366af28fed96b26bd911b9263c6709b3e357fb]
Former-commit-id: c13b00799434f00c1387baa5624749c90c59220b

--- a/index.html
+++ b/index.html
@@ -422,10 +422,9 @@
 						mouse or slide your finger, your view will rotate around it. Consider clicking the button on the far right to show the model full-screen. 
 					</p>
 					<br class="clearboth">
-				<div class="floatL pad15">
+				<div class="floatL pad15" id="dugout-textures">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/ebc7efd2f44747f9b801210566896f94/embed"
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>		
-					
 				</div>
 				<p class="blackwide">
 						This shows the first two habitats finished and home to a crew of 30. Most of the interior hasn't been modeled but the main areas have 
@@ -515,6 +514,11 @@
 				<br class="clearboth">
 	</div>
 	<br>
+		<div class="rowL">
+			<div class="col-11 col-m-11 darkYellow">
+				<iframe width="640" height="360" src="https://www.youtube.com/embed/TdYunLnqFj0" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</div>
 	<div class="rowR">
 			<div class="col-11 col-m-11 darkYellow">
 			<p class="black roundAll">
@@ -525,6 +529,9 @@
 				For what it's worth, there <i>is</i> a steepening learning curve here, and momentum is building behind the scenes. For now, 
 				i am trying to convey that by regularly posting to the forum and blog. 
 			</p>
+				<div class="darkYellow pix">
+					
+				</div>
 				<div class="darkYellow pix">
 			<img src="http://moonwards.com/img/GibA1300.jpg" alt="overview of first structures">
 			<p style="position: absolute; bottom: 5%; left: 5%;">Halfway through Mission 2</p>
