--- a/learn.html
+++ b/learn.html
@@ -415,6 +415,12 @@ $$v_e=\sqrt{\frac{2\mu}{r}}$$
 		    </div>
 		</div>
 		</div>
+		<div id="list">
+			<details>
+				<summary>Test area</summary>
+				<p>Test of some new tags for a data-list</p>
+			</details>
+		</div>
             <div class="col-12 col-m-12">     
                 <a href="http://www.gnu.org/licenses/">
                 <p>All calculator scripts are released under GPL 3</p>
