--- a/learn.html
+++ b/learn.html
@@ -416,7 +416,7 @@ $$v_e=\sqrt{\frac{2\mu}{r}}$$
 		</div>
 		</div>
 		<div id="list">
-			<details>
+			<details class="details">
 				<summary>Test area</summary>
 				<p>Test of some new tags for a data-list</p>
 			</details>
