--- a/learn.html
+++ b/learn.html
@@ -416,9 +416,17 @@ $$v_e=\sqrt{\frac{2\mu}{r}}$$
 		</div>
 		</div>
 		<div id="list">
+			<p>A gigantic list. Here are some numbers we have found useful during the development of the project. (experimental)</p>
 			<details class="details">
-				<summary>Test area</summary>
-				<p>Test of some new tags for a data-list</p>
+				<summary>List of numbers</summary>
+				<details>
+					<summary>The Moon</summary>
+					<ul>
+						<li>Mass:</li>
+						<li>Radius:</li>
+						<li>Gravitational prameter:</li>
+					</ul>
+				</details>
 			</details>
 		</div>
             <div class="col-12 col-m-12">     
