--- a/learn.html
+++ b/learn.html
@@ -415,7 +415,8 @@ $$v_e=\sqrt{\frac{2\mu}{r}}$$
 		    </div>
 		</div>
 		</div>
-		<div id="list">
+                <div class="black col-9 col-m-10">
+                    <div class="darkYellow pad15 roundAll">
 			<p>A gigantic list. Here are some numbers we have found useful during the development of the project. (experimental)</p>
 			<details class="details">
 				<summary>List of numbers</summary>
@@ -428,6 +429,7 @@ $$v_e=\sqrt{\frac{2\mu}{r}}$$
 					</ul>
 				</details>
 			</details>
+			</div>
 		</div>
             <div class="col-12 col-m-12">     
                 <a href="http://www.gnu.org/licenses/">
