language + tag nesting error
Former-commit-id: 462b48eec443839352ddfdc09ed578c7005d53aa

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-	<!doctype html>
-<html class="no-js" lang="">
+<!doctype html>
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -83,7 +83,7 @@
     <div class="rowR">
      		<h1 class="col-9 col-m-10">The <span class="yellow">V</span>irtual <span class="yellow">M</span>oon 
      		<span class="yellow">C</span>olony Project: 
-     		<span class="yellow">Cernan's Promise</span> VMC</span> </h1>
+     		<span class="yellow">Cernan's Promise</span> VMC</h1>
     </div>
     <div class="rowR pix">
      		<p class="col-9r12 col-m-10r12 black roundLeft">
