--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 					</p>
 					<br class="clearboth">
 				<div class="floatL pad15">
-					<iframe width="640" height="480" src="TESTbasalt-fiber-plant2.html" 
+					<iframe width="100%" height="auto" src="TESTbasalt-fiber-plant2.html" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 				</div>
 				<p class="blackwide">
