--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
 <link rel="stylesheet" href="css/cssportal.tooltip.css">
 <link rel="stylesheet" href="css/main.css">
 <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,400,400i,600" rel="stylesheet">
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
 <script src="js/modernizr-2.8.3.min.js"></script>
     </head>
         <body>
@@ -251,6 +249,9 @@
 			GRAIL, and Clementine are all on it.
 				</p>
 			<br>
+	</div>
+	<div class="rowL black85">
+		<iframe width="80%" height="auto" src="webplayer/webplayer.html?load=blend4web/LalandeMarkers.json">if you see this something is wrong</iframe>
 	</div>
 	<div class="rowR darkYellow">
 		<div class="col-12 col-m-12">
