--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 			<br>
 	</div>
 	<div class="rowL black85">
-		<iframe width="80%" height="auto" src="webplayer/webplayer.html?load=blend4web/LalandeMarkers.json">if you see this something is wrong</iframe>
+		<iframe width="80%" height="auto" src="webplayer/webplayer.html?load=./blend4web/LalandeMarkers.json">if you see this something is wrong</iframe>
 	</div>
 	<div class="rowR darkYellow">
 		<div class="col-12 col-m-12">
