--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 	</div>
 	<div class="rowL black85">
 		
-<iframe width="80%" height="auto" onload="this.style.height=this.style.width*0.8" src="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json">if you see this something is wrong</iframe>
+<iframe width="80%" height="auto" onload="this.style.height=Math.floor(this.style.width*0.8)" src="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json">if you see this something is wrong</iframe>
 	</div>
 	<div class="rowR darkYellow">
 		<div class="col-12 col-m-12">
