--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 	</div>
 	<div class="rowL black85">
 		
-<iframe width="70%" onload="this.height=Math.floor(this.offsetWidth*0.6)" src="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json">if you see this something is wrong</iframe>
+<iframe allowfullscreen width="70%" onload="this.height=Math.floor(this.offsetWidth*0.6)" src="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json">if you see this something is wrong</iframe>
 	</div>
 	<div class="rowR darkYellow">
 		<div class="col-12 col-m-12">
