added notes to css docs
Former-commit-id: 4ac36c86bcc68c1924c8e92b593894571f96b8ef

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 		 </h2>
 		 
 	 </div>
-	 <div class="rowL black85">
+	 <div class="rowL black">
 	 	<div class="col-12 col-m-12">
 		 	<p class="centertext yellow">
 		 	Hover over or tap the numbered markers to see more information.
 		 	</p>
 		 </div>	 
-				<div class="col-4 col-m-4">
+			<div class="col-4 col-m-4">
 				<div class="darkYellow pix">
 					<button class="numbers tooltipBMR" style="top: 65%; left: 50%;">1
 					<span>
@@ -160,8 +160,7 @@
 					</button>
 				<img src="http://moonwards.com/img/LalandeRegion.svg" alt="Lalande Crater overview">
 			 	
-			</div>
-
+				</div>
 			</div>
 			<div class="col-4 col-m-4"> 
 				<div class="darkYellow pix">
@@ -428,7 +427,7 @@
 					<iframe width="640" height="480" src="https://sketchfab.com/models/ebc7efd2f44747f9b801210566896f94/embed"
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>		
 				</div>
-				<p class="blackwide">
+				<p class="black extrapad">
 						This shows the first two habitats finished and home to a crew of 30. Most of the interior hasn't been modeled but the main areas have 
 						been sketched into the first dugout and hall. This model has been done with lighting and materials that give a much better sense of 
 						what the space would be like, and it has been optimized so that it will run smoothly on most computers, including many tablets. 
@@ -449,7 +448,7 @@
 					<iframe width="640" height="480" src="https://sketchfab.com/models/1621e5f3283840b6b02385cfd8ec98dd/embed" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 				</div>
-				<p class="blackwide">
+				<p class="black extrapad">
 						This whole colony concept depends on basalt being used for a great many things, and on focused sunlight being used to process it. The Melt-In-Place Station comes up on the first mission to test and refine 
 						how to make building materials out of the basalt dust all over the dark areas of the Moon. In the vacuum of space this basalt feedstock will behave differently than such material on Earth, 
 						and it has a chemical make-up different than anything found here. It is absolutely free of hydrated minerals (with water molecules in their crystal structure) and organic chemicals, 
@@ -463,7 +462,7 @@
 					<iframe width="100%" height="auto" src="TESTbasalt-fiber-plant2.html" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 				</div>
-				<p class="blackwide">
+				<p class="black extrapad">
 					This sketch is even more sketchy than the others, more of a schematic really. Basalt rope and cloth are strong and durable here on 
 					Earth, and are made with a simple process. How that process will need to be adapted on the Moon is an open question. It can be done though. 
 					The cable can be used to reinforce the arches and anchors that contain the pressure of the air in the habs, it can be cable for the 
@@ -477,7 +476,7 @@
 					<iframe width="640" height="480" src="https://sketchfab.com/models/725b90da58d14b778ab155c85b1bd425/embed" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 				</div>
-				<p class="blackwide">
+				<p class="black extrapad">
 					Here is the first venture into what could be done on the Moon once the scale necessary to build real towns exists. It extends the 
 					methods already outlined, and takes advantage of the terrain. 
 				</p>
@@ -486,7 +485,7 @@
 					<iframe width="640" height="480" src="https://sketchfab.com/models/4846483593ec499b8d8fac77d38077ab/embed" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>   
 				</div>
-				<p class="blackwide">
+				<p class="black extrapad">
 					This is a chemical process that will probably be useful on the Moon. A possible alternate approach to obtaining iron is to magnetically 
 					separate small particles high in iron using magnets, and then melting them down and skimming off the slag. The ilmenite approach would 
 					also require such a step but the feedstock might be much easier to obtain. And it creates the option of shipping only hydrogen from 
@@ -502,7 +501,7 @@
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 					</div>
 				</div>
-				<p class="blackwide">
+				<p class="black extrapad">
 					The TESS, the Thermal Energy Storage System, is a centerpiece of this approach. It provides electricity generation 
 					both day and night. 
 					It isn't a very efficient system - 20% energy conversion 
