--- a/index.html
+++ b/index.html
@@ -249,10 +249,6 @@
 				</p>
 			<br>
 	</div>
-	<div class="rowL black85 pad15">
-		
-<iframe allowfullscreen width="70%" onload="this.height=Math.floor(this.offsetWidth*0.6)" src="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json">if you see this something is wrong</iframe>
-	</div>
 	<div class="rowR darkYellow">
 		<div class="col-12 col-m-12">
 					<div class="darkYellow pix">
@@ -374,6 +370,14 @@
 				</div>
 		</div>
 	</div>
+	<div class="rowL black pad15" id="b4w_Lalande">
+				<p> You can move around the map of Lalande below to get a feel for the place. It is an accurate model based on laser 
+				altimeter data from the LRO combined with image data. 
+			</p>
+		<iframe allowfullscreen width="70%" onload="this.height=Math.floor(this.offsetWidth*0.6)" 
+		src="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json"></iframe>
+
+	</div>	
 	<div class="rowL">
 		<h2 id="colony" class="col-10 col-m-10">
 		 	<span class="yellow">Colony:</span> Phase 1 of Cernan's Promise
