--- a/learn.html
+++ b/learn.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -49,7 +49,7 @@
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. 
-            Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            Please <a href="http://www.mozilla.org/en-US/firefox/new/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 	<header>
 	<a href="index.html" style="background-color:transparent;">
@@ -268,9 +268,11 @@ subHop();
                         <p id="resultLE3">&nbsp;</p>
                     </div>
                 </div>
+<!--
                 <div class="black roundAll">
                 	<a href="browsergame/shell.html"><img src="browsergame/images/link.png" alt="go to the browser game!"></a>
                 </div>
+-->
                 <div>
 			<a href="rotovator.html"><img class="realsize" width="262" height="254" src="img/animatedRotovatorLink.png" alt="view the animations!"></a>
                 </div>
@@ -438,8 +440,5 @@ $$v_e=\sqrt{\frac{2\mu}{r}}$$
                 </a>
             </div>
     </div>
-    </div>
-<script>
-</script>
     </body>
 </html>
