nav bar changes
Former-commit-id: 8e217221d91b9b12d108a3085a0408cfe5343e1a [formerly 52602e57f9265340e6ed89b88b4b42ba7405de2a]
Former-commit-id: dd223647139718fbe642506d752ddb307c5bf33b

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. 
-            Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            A lot of stuff on Moonwards relies on modern standards, so you may want to <a href="https://www.mozilla.org/en-US/firefox/new/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 	<header>
 	<img src="http://moonwards.com/img/MWLogo-for-black-bckgnd.svg" alt="Moonwards logo" id="logo">
@@ -67,17 +67,18 @@
   					<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
   				</ul>
   			</li>
+			<li><a href="https://realtimeboard.com/app/board/o9J_k0iGgz4=/">Whiteboard</a>
+  			</li>
   		</ul>
   		</div>
   	</nav>
 	</header>
 <div id="container">
 	<div class="rowR">
-     <h3 class="col-4 col-m-4">
-     	What would it <span style="color: yellow;">really</span> be like to live 
-     	on the Moon?
-     </h3>
-    </div>
+		<h3 class="col-4 col-m-4">
+			What would it <span style="color: yellow;">really</span> be like to live on the Moon?
+		</h3>
+	</div>
     <div class="rowR">
      		<h1 class="col-9 col-m-10">The <span class="yellow">V</span>irtual <span class="yellow">M</span>oon 
      		<span class="yellow">C</span>olony Project: 
@@ -1016,10 +1017,9 @@
 						noonday tropical sun on Earth. 
 						</span>
 					</button>
-	 	</div>
-	 </div>
+				</div>
+			</div>
+		</div>
 	</div>
-</div>
-	 
 </body>
 </html>
