--- a/404.html
+++ b/404.html
@@ -1,18 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Page Not Found</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-
-        * {
-            line-height: 1.2;
-            margin: 0;
-        }
-
+	<meta charset="utf-8">
+	<title>Page Not Found</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
         html {
-            color: #888;
+            color: rgb(255,200,0);
             display: table;
             font-family: sans-serif;
             height: 100%;
@@ -21,9 +15,10 @@
         }
 
         body {
-            display: table-cell;
-            vertical-align: middle;
-            margin: 2em auto;
+		background-color:#000000;
+		display: table-cell;
+		vertical-align: middle;
+		margin: 2em auto;
         }
 
         h1 {
@@ -50,11 +45,15 @@
 
         }
 
-    </style>
+	</style>
 </head>
 <body>
-    <h1>Page Not Found</h1>
-    <p>Sorry, but the page you were trying to view does not exist.</p>
+	<svg width="150" heigth="150">
+		<path d="M90 10A1 1 0 0 0 90 140A0.85 1 0 0 1 90 10" fill="grey"/>
+	</svg>
+	<h1>Page Not Found</h1>
+	<p>Sorry, but the page you were trying to view does not exist.</p>
 </body>
 </html>
 <!-- IE needs 512+ bytes: http://blogs.msdn.com/b/ieinternals/archive/2010/08/19/http-error-pages-in-internet-explorer.aspx -->
+
